Fixed plone4 buildout for Products.EEATemplatesService, refs #8940

--- a/trunk/Products.EEATemplatesService/buildouts/plone4/buildout.cfg
+++ b/trunk/Products.EEATemplatesService/buildouts/plone4/buildout.cfg
@@ -1,5 +1,7 @@
 [buildout]
-extends = versions.cfg
+extends = 
+    versions.cfg
+    https://svn.eionet.europa.eu/repositories/Zope/trunk/www.eea.europa.eu/trunk/buildout-configs/sources.cfg
 
 index = http://eggrepo.eea.europa.eu/pypi/
 
@@ -72,7 +74,3 @@ eggs =
 [versions]
 zope.schema = 3.6.4
 
-[sources]
-Products.EEATemplatesService = svn https://svn.eionet.europa.eu/repositories/Zope/trunk/Products.EEATemplatesService/trunk
-Products.NavigationManager = svn https://svn.eionet.europa.eu/repositories/Zope/trunk/Products.NavigationManager/trunk
-collective.monkeypatcher = svn https://svn.plone.org/svn/collective/collective.monkeypatcher/trunk/
