--- a/buildouts/plone4/buildout.cfg
+++ b/buildouts/plone4/buildout.cfg
@@ -4,9 +4,9 @@ package-name = Products.EEATemplatesService
 develop = ../../
 also-develop =
 
-index = http://eggrepo.eea.europa.eu/pypi/
-find-links = 
-  http://eggrepo.eea.europa.eu/simple
+index = http://eggrepo.apps.eea.europa.eu/pypi/
+find-links =
+  http://eggrepo.apps.eea.europa.eu/simple
   http://dist.plone.org/thirdparty/
 
 [instance]
